force hidden scrollbar, prevents them from appearing at high zoom levels

--- a/css/isicp.css
+++ b/css/isicp.css
@@ -222,3 +222,7 @@ img.center {
 .CodeMirror {
   line-height: 1.3em;
 }
+
+.CodeMirror-scrollbar {
+  display: none !important;
+}
